1、jar包依赖版本修改 2、添加Nacos配置文件目录，方便快速导入配置启动项目 3、README 添加项目启动步骤说明

--- a/spring-cloud-learn-eureka-server/src/main/resources/application.yml
+++ b/spring-cloud-learn-eureka-server/src/main/resources/application.yml
@@ -16,7 +16,7 @@ eureka:
       #服务注册
       defaultZone: http://192.168.137.100:8001/eureka/,http://192.168.137.100:8002/eureka/
   instance:
-    hostname: localhost
+    hostname: www.nahsshan.com
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 ---
@@ -30,7 +30,7 @@ eureka:
       #服务注册
       defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8002/eureka/
   instance:
-    hostname: localhost
+    hostname: www.nahsshan.com
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 ---
@@ -44,6 +44,6 @@ eureka:
       #服务注册
       defaultZone: http://192.168.137.100:8000/eureka/,http://192.168.137.100:8001/eureka/
   instance:
-    hostname: localhost
+    hostname: www.nahsshan.com
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
