--- a/spring-cloud-learn-ribbon/src/main/resources/application.yml
+++ b/spring-cloud-learn-ribbon/src/main/resources/application.yml
@@ -14,12 +14,12 @@ eureka:
       #服务注册
       defaultZone: http://192.168.137.1:8000/eureka/,http://192.168.137.1:8001/eureka/,http://192.168.137.1:8002/eureka/
   instance:
-    hostname: localhost
+    hostname: www.nahsshan.com
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 #服务提供方主机
 service-provider:
-  host: localhost
+  host: www.nahsshan.com
   #服务提供方端口
   port: 8080
   #服务提供方名称
