--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <springboot.version>2.2.6.RELEASE</springboot.version>
+        <springboot.version>2.2.5.RELEASE</springboot.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-        <nacos-discovery.version>2.2.1.RELEASE</nacos-discovery.version>
+        <nacos-discovery.version>2.2.0.RELEASE</nacos-discovery.version>
         <nacos-config.version>2.2.0.RELEASE</nacos-config.version>
         <redisson.version>3.12.4</redisson.version>
         <curator.version>4.3.0</curator.version>
@@ -32,10 +32,14 @@
         <fastjson.version>1.2.68</fastjson.version>
         <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
         <alibaba-sentinel.version>2.2.0.RELEASE</alibaba-sentinel.version>
-        <sentinel-datasource-nacos.version>1.7.2</sentinel-datasource-nacos.version>
+        <sentinel-datasource-nacos.version>1.7.1</sentinel-datasource-nacos.version>
         <commons-pool2.version>2.8.0</commons-pool2.version>
-        <sentinel-transport-common.version>1.7.2</sentinel-transport-common.version>
-        <sentinel-spring-cloud-gateway-adapter.version>1.7.2</sentinel-spring-cloud-gateway-adapter.version>
+        <sentinel-transport-common.version>1.7.1</sentinel-transport-common.version>
+        <sentinel-spring-cloud-gateway-adapter.version>1.7.1</sentinel-spring-cloud-gateway-adapter.version>
+        <sentinel-transport-simple-http.version>1.7.1</sentinel-transport-simple-http.version>
+        <spring-boot-starter-ahas-sentinel-client.version>1.5.5</spring-boot-starter-ahas-sentinel-client.version>
+        <spring-cloud-starter-alibaba-sentinel.version>2.2.0.RELEASE</spring-cloud-starter-alibaba-sentinel.version>
+        <slf4j-nop.version>2.0.0-alpha1</slf4j-nop.version>
     </properties>
 
     <dependencyManagement>
@@ -111,7 +115,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-                <version>${alibaba-sentinel.version}</version>
+                <version>${spring-cloud-starter-alibaba-sentinel.version}</version>
             </dependency>
 
             <dependency>
@@ -122,11 +126,22 @@
 
             <dependency>
                 <groupId>com.alibaba.csp</groupId>
+                <artifactId>spring-boot-starter-ahas-sentinel-client</artifactId>
+                <version>${spring-boot-starter-ahas-sentinel-client.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
                 <artifactId>sentinel-transport-common</artifactId>
                 <version>${sentinel-transport-common.version}</version>
                 <scope>provided</scope>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
+                <artifactId>sentinel-transport-simple-http</artifactId>
+                <version>${sentinel-transport-simple-http.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.alibaba.csp</groupId>
@@ -139,6 +154,13 @@
                 <artifactId>commons-pool2</artifactId>
                 <version>${commons-pool2.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-nop</artifactId>
+                <version>${slf4j-nop.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
