--- a/spring-cloud-learn-eureka-client/src/main/resources/application.yml
+++ b/spring-cloud-learn-eureka-client/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        namespace: 76c05fec-31cb-4c9d-a97b-cbabbbb7c56b
+        namespace: nahsshan
         server-addr: 192.168.137.100:8848,192.168.137.100:8849,192.168.137.100:8850
         metadata:
           target-version: 1.0.0
@@ -23,7 +23,7 @@ server:
 #      defaultZone: http://192.168.137.1:8000/eureka/,http://192.168.137.1:8001/eureka/,http://192.168.137.1:8002/eureka/
 #    registry-fetch-interval-seconds: 10
 #  instance:
-#    hostname: localhost
+#    hostname: www.nahsshan.com
 #    prefer-ip-address: true
 #    instance-id: ${spring.cloud.client.ip-address}:${server.port}
 management:
