--- a/spring-cloud-learn-zuul/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-zuul/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
       config:
         file-extension: yml
         server-addr: 192.168.137.1:8848
-        namespace: 63c8c314-574c-46cf-b4fb-50c9e304b2d3
+        namespace: nashshan
         ext-config[0]:
           data-id: zuul-application.yml
           group: ${spring.application.name}
