--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <spring-boot-starter-ahas-sentinel-client.version>1.5.5</spring-boot-starter-ahas-sentinel-client.version>
         <spring-cloud-starter-alibaba-sentinel.version>2.2.0.RELEASE</spring-cloud-starter-alibaba-sentinel.version>
         <slf4j-nop.version>2.0.0-alpha1</slf4j-nop.version>
+        <spring-cloud-starter-dubbo.version>2.2.0.RELEASE</spring-cloud-starter-dubbo.version>
     </properties>
 
     <dependencyManagement>
@@ -103,6 +104,13 @@
                 <groupId>org.joda</groupId>
                 <artifactId>joda-money</artifactId>
                 <version>${joda-money.version}</version>
+            </dependency>
+
+            <!-- spring-cloud-dubbo -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-dubbo</artifactId>
+                <version>${spring-cloud-starter-dubbo.version}</version>
             </dependency>
 
             <!-- Sentinel -->
@@ -176,10 +184,10 @@
             <scope>compile</scope>
         </dependency>
         <!-- actuator -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--        </dependency>-->
         <!-- 日志 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
