--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
+    <artifactId>spring-cloud-learn-user-microservice-api-provider</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,9 +20,26 @@
     <dependencies>
 
         <dependency>
-            <artifactId>spring-cloud-learn-user-mapper</artifactId>
+            <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
             <groupId>com.shanshan</groupId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Spring Cloud Alibaba Dubbo -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
+        </dependency>
+
+        <!-- Nacos -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
     </dependencies>
