--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-controller/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-controller/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>sentinel-transport-common</artifactId>
         </dependency>
 
+        <!-- oauth2 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
