--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-cloud-learn-user</module>
         <module>spring-cloud-learn-zuul</module>
         <module>spring-cloud-learn-gateway</module>
+        <module>spring-cloud-learn-sso</module>
     </modules>
 
     <properties>
@@ -41,6 +42,7 @@
         <spring-cloud-starter-alibaba-sentinel.version>2.2.0.RELEASE</spring-cloud-starter-alibaba-sentinel.version>
         <slf4j-nop.version>2.0.0-alpha1</slf4j-nop.version>
         <spring-cloud-starter-dubbo.version>2.2.0.RELEASE</spring-cloud-starter-dubbo.version>
+        <spring-cloud-starter-oauth2.version>2.2.0.RELEASE</spring-cloud-starter-oauth2.version>
     </properties>
 
     <dependencyManagement>
@@ -59,6 +61,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- spring-cloud-starter-oauth2 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-oauth2</artifactId>
+                <version>${spring-cloud-starter-oauth2.version}</version>
+            </dependency>
+
 
             <!-- nacos -->
             <dependency>
