--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/src/main/resources/bootstrap.yaml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/src/main/resources/bootstrap.yaml
@@ -30,6 +30,8 @@ spring:
         server-addr: www.nahsshan.com:8848
 # Dubbo 配置项，对应 DubboConfigurationProperties 类
 dubbo:
+  metadata-report:
+    address: nacos://127.0.0.1:8848
   scan:
     # 指定 Dubbo 服务实现类的扫描基准包
     base-packages: com.nahsshan.user.service
@@ -43,7 +45,7 @@ dubbo:
   # Dubbo 服务注册中心配置，对应 RegistryConfig 类
   registry:
     # 指定 Dubbo 服务注册中心的地址
-    address: spring-cloud://127.0.0.1:8848
+    address: nacos://127.0.0.1:8848
   # Spring Cloud Alibaba Dubbo 专属配置项，对应 DubboCloudProperties 类
   cloud:
     # 设置订阅的应用列表，默认为 * 订阅所有应用
