--- a/spring-cloud-learn-eureka-client/pom.xml
+++ b/spring-cloud-learn-eureka-client/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-learn</artifactId>
-        <groupId>com.shanshan</groupId>
+        <groupId>com.nahsshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,10 +19,16 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <artifactId>spring-cloud-learn-common</artifactId>
+            <groupId>com.nahsshan</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <artifactId>spring-cloud-learn-user-common</artifactId>
-            <groupId>com.shanshan</groupId>
+            <groupId>com.nahsshan</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
