--- a/spring-cloud-learn-sso/pom.xml
+++ b/spring-cloud-learn-sso/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-learn</artifactId>
-        <groupId>com.shanshan</groupId>
+        <groupId>com.nahsshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,11 +12,21 @@
     <artifactId>spring-cloud-learn-sso</artifactId>
 
     <dependencies>
-
         <dependency>
             <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
-            <groupId>com.shanshan</groupId>
+            <groupId>com.nahsshan</groupId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <artifactId>nahsshan-mybatis-auto-config</artifactId>
+            <groupId>com.nahsshan</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
