--- a/spring-cloud-learn-user/spring-cloud-learn-user-common/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-common/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-learn-user</artifactId>
-        <groupId>com.shanshan</groupId>
+        <groupId>com.nahsshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,14 +17,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <artifactId>spring-cloud-learn-common</artifactId>
-            <groupId>com.shanshan</groupId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-    
     <build>
         <plugins>
             <plugin>
