--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-learn-user</artifactId>
-        <groupId>com.shanshan</groupId>
+        <groupId>com.nahsshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,9 +20,22 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.nahsshan</groupId>
             <artifactId>spring-cloud-learn-user-microservice-api</artifactId>
-            <groupId>com.shanshan</groupId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nahsshan</groupId>
+            <artifactId>spring-cloud-learn-user-mapper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nahsshan</groupId>
+            <artifactId>nahsshan-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Spring Cloud Alibaba Dubbo -->
@@ -41,6 +54,7 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
 
     </dependencies>
     
