--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api/pom.xml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-cloud-learn-user</artifactId>
-        <groupId>com.shanshan</groupId>
+        <groupId>com.nahsshan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,8 +20,8 @@
     <dependencies>
 
         <dependency>
-            <artifactId>spring-cloud-learn-user-mapper</artifactId>
-            <groupId>com.shanshan</groupId>
+            <artifactId>spring-cloud-learn-user-common</artifactId>
+            <groupId>com.nahsshan</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
