--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-controller/src/main/resources/bootstrap.yml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-controller/src/main/resources/bootstrap.yml
@@ -45,7 +45,7 @@ spring:
 dubbo:
   # Dubbo 服务注册中心配置，对应 RegistryConfig 类
   registry:
-    address: spring-cloud://127.0.0.1:8848 # 指定 Dubbo 服务注册中心的地址
+    address: nacos://127.0.0.1:8848 # 指定 Dubbo 服务注册中心的地址
   # Spring Cloud Alibaba Dubbo 专属配置项，对应 DubboCloudProperties 类
   cloud:
     # 设置订阅的应用列表，默认为 * 订阅所有应用。
