--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-cloud-learn-sso</module>
         <module>nahsshan-redis-auto-config</module>
         <module>nahsshan-mybatis-auto-config</module>
+        <module>nahsshan-quartz</module>
     </modules>
 
     <properties>
@@ -49,6 +50,8 @@
 
         <commons-pool2.version>2.8.0</commons-pool2.version>
         <commons-collections4.version>4.4</commons-collections4.version>
+
+        <quartz.version>2.3.2</quartz.version>
 
     </properties>
 
@@ -153,6 +156,20 @@
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
+
+            <!-- quartz -->
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>${quartz.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-jobs</artifactId>
+                <version>${quartz.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
