--- a/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/src/main/resources/bootstrap.yaml
+++ b/spring-cloud-learn-user/spring-cloud-learn-user-microservice-api-provider/src/main/resources/bootstrap.yaml
@@ -50,6 +50,8 @@ dubbo:
   cloud:
     # 设置订阅的应用列表，默认为 * 订阅所有应用
     subscribed-services: ''
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
 
 
 
